feat: cors varios endpoints